--- a/HTML/main.html
+++ b/HTML/main.html
@@ -7,6 +7,6 @@
     <body>
         <h1>Potentiel Hydrogène</h1>
        <a href="https://www.youtube.com/watch?v=xvFZjo5PgG0" target="_blank">Potentiel Hydrogene</a>
-       <a href="https://fr.pornhub.com" target = "_blank">Liste de mes amis</a>
+       <a href="https://www.google.com/search?client=firefox-b-e&q=sex" target = "_blank">Liste de mes amis</a>
     </body>
 </html>
